# EventLedger

./: .gitignore  README.md  STATUS.md  justfile
infra/bootstrap/: main.tf
infra/environments/dev/: main.tf  outputs.tf
infra/modules/api/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infra/modules/lambdas/: main.tf  outputs.tf  variables.tf
lambdas/: Cargo.toml
lambdas/admin/: Cargo.toml
lambdas/admin/src/: main.rs
lambdas/compactor/: Cargo.toml
lambdas/compactor/src/: main.rs
lambdas/poll/: Cargo.toml
lambdas/poll/src/: main.rs
lambdas/publish/: Cargo.toml
lambdas/publish/src/: main.rs
lambdas/shared/: Cargo.toml
lambdas/shared/src/: dynamo.rs  errors.rs  lib.rs  models.rs  partitioner.rs
schemas/: commit-request.json  create-stream.json  create-subscription.json  error-response.json  publish-event.json  publish-request.json
tests/integration/: .env.example  Cargo.toml
tests/integration/src/: client.rs  fixtures.rs  lib.rs
tests/integration/tests/: api_tests.rs
