[workspace]
resolver = "2"
members = [
    "shared",
    "publish",
    "poll",
    "admin",
    "compactor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EventLedger"]
license = "MIT"
repository = "https://github.com/eventledger/eventledger"

[workspace.dependencies]
# AWS SDK
aws-config = "1.5"
aws-sdk-dynamodb = "1.54"
aws-sdk-s3 = "1.65"

# Lambda runtime
lambda_http = "0.14"
lambda_runtime = "0.13"
aws_lambda_events = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+1"] }

# Async
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }

# Utilities
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"

# Validation
jsonschema = "0.26"

# Testing
tokio-test = "0.4"
