[package]
name = "eventledger-compactor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
eventledger-core = { path = "../shared" }
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws_lambda_events = "0.15"
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_dynamo.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
