[package]
name = "eventledger-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_dynamo.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio-test.workspace = true
