[package]
name = "eventledger-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }

# Testing utilities
pretty_assertions = "1.4"
uuid = { version = "1.11", features = ["v4"] }

# AWS SDK for local DynamoDB testing
aws-config = "1.5"
aws-sdk-dynamodb = "1.54"

# Environment
dotenvy = "0.15"
